[project]
name = "beast-orchestrator"
version = "0.1.0"
description = "Orchestrates and coordinates work across multiple LLM nodes in Beast Mode cluster"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "llm", "orchestrator", "coordination", "beast-mode", "cluster", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
  "beast-mailbox-core>=0.3.0",
  # beast-node>=0.1.0 - Not yet published, will add when available
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "--cov=src/beast_orchestrator",
  "--cov-report=xml",
  "--cov-report=term-missing",
  "--verbose",
]

[project.urls]
Homepage = "https://github.com/nkllon/beast-orchestrator"
Repository = "https://github.com/nkllon/beast-orchestrator"

[project.scripts]
beast-orchestrator = "beast_orchestrator.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

